--- a/GUI/requirements.txt
+++ b/GUI/requirements.txt
@@ -13,6 +13,10 @@ pandas>=2.0.0
 plotly>=5.24.0
 
 # Serial communication
+# IMPORTANT: Use pyserial, NOT serial package!
+# pyserial provides the 'serial' module with serial.tools.list_ports
+# The 'serial==0.0.97' package also provides 'serial' but lacks serial.tools
+# Having both installed causes import conflicts and missing module errors
 pyserial>=3.5
 
 # Utility libraries
@@ -44,5 +48,9 @@ urllib3
 werkzeug
 zipp
 
-# Remove duplicate serial package
-# serial==0.0.97  # This conflicts with pyserial
+# CRITICAL: DO NOT INSTALL serial==0.0.97
+# This package conflicts with pyserial and will cause ImportError: No module named 'serial.tools'
+# The code requires pyserial's serial.tools.list_ports module which serial==0.0.97 lacks
+# If you see import errors for serial.tools, check: pip list | grep -i serial
+# You should ONLY see pyserial, not serial
+# To fix: pip uninstall serial && pip install pyserial>=3.5
