Clean up entry points for Docker deployment
- Consolidate all startup logic into single src/app.py entry point
- Remove complex launcher system (run.py, launcher.py, shell scripts)
- Update Docker configuration to use simplified entry point
- Remove device detection and OS-specific logic
- Default to mock communication for containerized deployment
- Add Docker-focused README documentation

This addresses the issue where Docker was running an older version
of the GUI by ensuring the newer sidebar/navbar UI is properly
containerized with a simplified entry point system.

--- a/GUI/docker/docker-compose.yml
+++ b/GUI/docker/docker-compose.yml
@@ -10,9 +10,7 @@ services:
       - DASH_HOST=0.0.0.0
       - DASH_PORT=8050
       - DASH_DEBUG=false
-    volumes:
-      # Mount for development (optional - remove for production)
-      - ..:/app
+      - USE_MOCK_COMMUNICATION=true
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8050"]
