--- a/GUI/docker/docker-compose.dev.yml
+++ b/GUI/docker/docker-compose.dev.yml
@@ -2,7 +2,8 @@ services:
   hyperloop-gui:
     environment:
       - DASH_DEBUG=true
+      - USE_MOCK_COMMUNICATION=true
     volumes:
       - ..:/app
       - /app/__pycache__  # Exclude pycache from mounting
-    command: python app.py --reload
+    command: python src/app.py --debug
