--- a/GUI/docker/Dockerfile
+++ b/GUI/docker/Dockerfile
@@ -37,7 +37,7 @@ ENV DASH_HOST=0.0.0.0
 ENV DASH_PORT=8050
 ENV DASH_DEBUG=False
 ENV PYTHONPATH=/app
-ENV USE_MOCK_COMMUNICATION=true
+ENV SERIAL_SERVER_MODE=true
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
