--- a/GUI/docker/Dockerfile
+++ b/GUI/docker/Dockerfile
@@ -43,4 +43,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8050 || exit 1
 
 # Run the application
-CMD ["python", "app.py"]
+CMD ["python", "src/app.py"]
