--- a/GUI/docker/docker-compose.yml
+++ b/GUI/docker/docker-compose.yml
@@ -22,8 +22,7 @@ services:
       retries: 3
       start_period: 40s
     # Cross-platform host access
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    network_mode: "host"
 
 # Note: For cross-platform COM/serial port access:
 # 
