--- a/GUI/docker/docker-compose.yml
+++ b/GUI/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - DASH_PORT=8050
       - DASH_DEBUG=false
       - SERIAL_SERVER_MODE=true  # Use TCP serial server
-      - SERIAL_SERVER_HOST=host.docker.internal  # Cross-platform host reference
+      - SERIAL_SERVER_HOST=host.docker.internal  # Windows Docker uses host.docker.internal
       - SERIAL_SERVER_PORT=9999
     restart: unless-stopped
     healthcheck:
@@ -21,8 +21,10 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    # Cross-platform host access
-    network_mode: "host"
+    # Windows Docker doesn't support true host networking
+    # Use host.docker.internal instead
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 # Note: For cross-platform COM/serial port access:
 # 
